--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "@fullcalendar/interaction": "^5.8.0",
         "@fullcalendar/timegrid": "^5.8.0",
         "chart.js": "^3.3.2",
+        "crypto-js": "^4.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
         "primeflex": "3.1.0",
         "primeicons": "5.0.0",
         "primeng": "13.0.2",
