--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
                             "src/upload.php"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "node_modules/ngx-spinner/animations/ball-grid-beat.css"
                         ],
                         "scripts": [
                             "node_modules/prismjs/prism.js",
