--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "crypto-js": "^4.2.0",
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
+        "ngx-spinner": "^13.1.1",
         "primeflex": "3.1.0",
         "primeicons": "5.0.0",
         "primeng": "13.0.2",
