--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "web-animations-js": "^2.3.2",
+        "xlsx": "^0.18.5",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
